eks-yaml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-dev-host-ingress
  namespace: web-dev-environment
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:<Account_ID>:certificate/<ARN of the certificate>
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: web-dev-alb
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: web-api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-dev-service
                port:
                  number: 8000
